# iPet

./: .env.example  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
docs/: TOOL_PACKAGE.md
scripts/: build-portable-zip.js
src/: icons.js  main.js  markdown.js  styles.css  tauriBridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_error.rs  config.rs  lib.rs  llm_client.rs  main.rs  secret.rs  storage.rs  tool_dispatcher.rs  tool_package.rs  usage_tracker.rs
src-tauri/src/storage/: caches.rs  chat.rs  mod.rs  pomodoro.rs  preferences.rs  token_usage.rs  tools.rs  usage.rs
src/app/: overlay.js  platform.js  state.js  tauriBridge.js  theme.js
src/components/ChatBubble/: ChatBubble.js  ChatBubble.test.js
src/components/PetCharacter/: PetCharacter.js
src/components/SettingsPanel/: SettingsPanel.js
src/components/SystemPanel/: SystemPanel.js
src/live2d/: petAnimator.js
src/shell/: AppShell.js  AppShell.test.js  CompanionCapsule.js  ControlCenter.js  TalkWorkspace.js  WindowChrome.js
src/styles/: base.css  chat.css  control-center.css  dialog.css  responsive.css  shell.css  tokens.css
src/ui/: icons.js
src/utils/: markdown.test.js
src/views/: AppearanceView.js  MemoryView.js  ModelView.js  SystemView.js  ToolsView.js  UsageView.js  layout.test.js  shared.js
tool-packages/app_usage_stats/: openai-function.json  tool.json
tool-packages/clipboard_read/: openai-function.json  tool.json
tool-packages/control_pomodoro/: tool.json
tool-packages/create_note/: openai-function.json  tool.json
tool-packages/desktop_tools/rust/: Cargo.toml
tool-packages/desktop_tools/rust/src/: lib.rs
tool-packages/disk_cleanup_candidates/: openai-function.json  tool.json
tool-packages/echo_local/: README.md  echo_tool.js  tool.json
tool-packages/get_system_status/: README.md  openai-function.json  tool.json
tool-packages/get_system_status/rust/: Cargo.toml  INTEGRATION.md
tool-packages/get_system_status/rust/src/: lib.rs  system_monitor.rs
tool-packages/git_status/: openai-function.json  tool.json
tool-packages/list_processes/: openai-function.json  tool.json
tool-packages/network_status/: openai-function.json  tool.json
tool-packages/open_path/: openai-function.json  tool.json
tool-packages/package_scripts/: openai-function.json  tool.json
tool-packages/read_text_file/: openai-function.json  tool.json
tool-packages/recent_system_errors/: openai-function.json  tool.json
tool-packages/run_project_check/: openai-function.json  tool.json
tool-packages/scan_disk/: README.md  openai-function.json  tool.json
tool-packages/scan_disk/rust/: Cargo.toml  INTEGRATION.md
tool-packages/scan_disk/rust/src/: app_error.rs  disk_scanner.rs  lib.rs
tool-packages/screenshot_ocr/: openai-function.json  tool.json
tool-packages/search_files/: openai-function.json  tool.json
tool-packages/weather_lookup/: openai-function.json  tool.json
tool-packages/web_search/: openai-function.json  tool.json
