[workspace]
resolver = "2"
members = [
    "src-tauri",
    "tool-packages/scan_disk/rust",
    "tool-packages/get_system_status/rust",
    "tool-packages/desktop_tools/rust",
]

# Shared dependency versions — pinned once so the builtin tool crates and the
# host app stay in lock-step. The two tool crates under `tool-packages/` are
# the single source of truth for the builtin tools; `src-tauri` depends on
# them via path.
[workspace.dependencies]
ipet-tool-scan-disk = { path = "tool-packages/scan_disk/rust" }
ipet-tool-get-system-status = { path = "tool-packages/get_system_status/rust" }
ipet-tool-desktop-tools = { path = "tool-packages/desktop_tools/rust" }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
sysinfo = "0.32"
ureq = "2.12"
