[package]
name = "ipet"
version = "0.1.0"
description = "A lightweight desktop pet with local system tools and LLM chat."
authors = ["iPet"]
edition = "2021"

[lib]
name = "ipet_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3.32"
rayon = "1.12.0"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.32.1"
tauri = { version = "2.11.2", features = [] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "time"] }
walkdir = "2.5.0"
