[package]
name = "ipet"
version = "0.4.0"
description = "A lightweight desktop pet with local system tools and LLM chat."
authors = ["iPet"]
edition = "2021"

[lib]
name = "ipet_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
ipet-tool-scan-disk = { workspace = true }
ipet-tool-get-system-status = { workspace = true }
ipet-tool-desktop-tools = { workspace = true }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3.32"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.2", features = [] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.42"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
