[package]
name = "ipet-tool-get-system-status"
version = "1.0.0"
edition = "2021"
description = "iPet built-in tool for collecting CPU, memory, disk, and process status."

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"

