[package]
name = "ipet-tool-scan-disk"
version = "1.0.0"
edition = "2021"
description = "iPet built-in tool for scanning disk usage under a local path."

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"

